# ccargo

./: Cargo.toml  Makefile  readme.md
.github/workflows/: build.yml  release.yml
src/: args.rs  bazel.rs  cmake.rs  common.rs  main.rs
src/tpl/: .bazelrc  .clang-format  .clang-tidy  BUILD.bazel  BUILD2.bazel  CMakeLists.txt  CMakePresets.json  MODULE.bazel  Makefile  copts.bzl  main.cc  main.cpp  repositories.bzl
src/tpl/cmake/: clang-tidy.cmake  dwarf.cmake  sanitizer.cmake
