[package]
edition = "2021"
name = "ccargo"
version = "0.1.0"

[dependencies]
anyhow = "1.0.99"
clap = { version = "4.5.47", features = ["derive"] }
minijinja = "2.12.0"

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
lto = true
opt-level = 3
overflow-checks = false
panic = "abort"
rpath = false
strip = "debuginfo"
