[package]
edition = "2024"
name = "ccargo"
version = "0.1.0"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.57", features = ["derive"] }
minijinja = "2.14.0"

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
lto = true
opt-level = 3
overflow-checks = false
panic = "abort"
rpath = false
strip = "debuginfo"
