load("@rules_cc//cc:defs.bzl", "cc_binary")
load("//bazel:copts.bzl", "DEFAULT_COPTS","DEFAULT_LINKOPTS")

cc_binary(
    name = "{{ name }}",
    srcs = ["main.cc"],
    copts = DEFAULT_COPTS,
    linkopts = DEFAULT_LINKOPTS,
    deps = [
        # "@google_benchmark//:benchmark_main",
        # "@googletest//:gtest",
        # "@asio",
        # "@spdlog",
    ],
)
