"""
project {{ name }} ! update to latest version from https://registry.bazel.build/ 
"""
module(name = "{{ name }}")

bazel_dep(name = "rules_cc", version = "0.2.8")
bazel_dep(name = "mimalloc", version = "2.2.4")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_go", version = "0.57.0")

bazel_dep(name = "compilation_database", version = "0.1.2")

git_override(
    module_name = "compilation_database",
    remote = "https://github.com/0x1042/compilation_database.git",
    commit = "03b59fd8bf6a9f10ea768ea57c4c7cd32a4db0d0",
)

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.host()
