"""
project {{ name }} ! update to latest version from https://registry.bazel.build/ 
"""
module(name = "{{ name }}")

bazel_dep(name = "rules_cc", version = "0.2.14")
bazel_dep(name = "mimalloc", version = "2.2.4")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_go", version = "0.59.0")
bazel_dep(name = "abseil-cpp", version = "20250814.1")

# bazel_dep(name = "asio", version = "1.34.2")
# bazel_dep(name = "googletest", version = "1.17.0.bcr.2")
# bazel_dep(name = "google_benchmark", version = "1.9.4")

bazel_dep(name = "compilation_database", version = "0.1.3")
git_override(
    module_name = "compilation_database",
    commit = "3dd2a166ac92ff3c654641dc82dabe3a390cac6d",
    remote = "https://github.com/0x1042/compilation_database.git",
)

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.host()
